--- a/lib/package.json
+++ b/lib/package.json
@@ -27,10 +27,12 @@
         "release-major": "bash ./scripts/release.sh major"
     },
     "peerDependencies": {
-        "is-callable": "^1.2.7"
+        "is-callable": "^1.2.7",
+        "@ptolemy2002/ts-brand-utils": "^1.0.0"
     },
     "devDependencies": {
         "@types/is-callable": "~1.1.2",
+        "@ptolemy2002/ts-brand-utils": "^1.0.0",
         "is-callable": "^1.2.7"
     }
 }
