--- a/example/package.json
+++ b/example/package.json
@@ -12,7 +12,8 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
-        "@ptolemy2002/ts-utils": "file:../lib"
+        "@ptolemy2002/ts-utils": "file:../lib",
+        "zod": "^4.3.6"
     },
     "repository": {
         "type": "git",
