--- a/lib/tsconfig.json
+++ b/lib/tsconfig.json
@@ -6,7 +6,8 @@
     "declaration": true,
     "outDir": "./dist",
     "skipLibCheck": true,
-    "maxNodeModuleJsDepth": 0
+    "maxNodeModuleJsDepth": 0,
+    "esModuleInterop": true
   },
   "include": [
     "src",
